--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7,8 +7,11 @@
 
 /* Space out content a bit */
 body {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  margin: 0px;
+  border: 0px;
+  padding: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
